file added for g-verification

--- a/stories/templates/stories/contact.html
+++ b/stories/templates/stories/contact.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Contact Us</title>
+  <meta name="google-site-verification" content="8X3lz0NailAdOjdJ-HufPa1QISfIqpTIIeEpssWL4sQ" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
