--- a/stories/templates/stories/404.html
+++ b/stories/templates/stories/404.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head>  <meta name="google-site-verification" content="8X3lz0NailAdOjdJ-HufPa1QISfIqpTIIeEpssWL4sQ" />
   <title>404 Error - Page Not Found</title>
   <style>
     body {
