--- a/stories/templates/stories/500.html
+++ b/stories/templates/stories/500.html
@@ -19,6 +19,7 @@
       margin-top: 20px;
     }
   </style>
+  <meta name="google-site-verification" content="8X3lz0NailAdOjdJ-HufPa1QISfIqpTIIeEpssWL4sQ" />
 </head>
 <body>
   <h1>404</h1>
