--- a/stories/templates/stories/about.html
+++ b/stories/templates/stories/about.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta name="google-site-verification" content="8X3lz0NailAdOjdJ-HufPa1QISfIqpTIIeEpssWL4sQ" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
