--- a/stories/templates/stories/index.html
+++ b/stories/templates/stories/index.html
@@ -1,5 +1,5 @@
 <html>
-  <head>
+  <head>  <meta name="google-site-verification" content="8X3lz0NailAdOjdJ-HufPa1QISfIqpTIIeEpssWL4sQ" />
     <title>Web Stories Homepage</title>
     <style>
       /* Add your CSS styles here */
