Added Description in stories

--- a/stories/templates/stories/story.html
+++ b/stories/templates/stories/story.html
@@ -13,7 +13,7 @@
     <script async custom-element="amp-story"
         src="https://cdn.ampproject.org/v0/amp-story-1.0.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Oswald:200,300,400" rel="stylesheet">
-    <meta name="description" content="{{cover.title}}">
+    <meta name="description" content="{{cover.description}}">
     <style amp-custom>
       amp-story {
         font-family: 'Oswald',sans-serif;
